# itg

./: Cargo.toml  README  shell.nix
src/: api_requests.rs  controls.rs  main.rs  ui.rs
src/models/: app_state.rs  args.rs  config.rs  errors.rs  issue.rs  menu_items.rs  mod.rs  popup.rs  repository.rs  screen.rs  stateful_list.rs
