[package]
name = "itg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
crossterm = "0.26.1"
tui = "0.19.0"
clap = { version = "4.1.8", features = ["derive"] }
confy = "0.5.1"
indicatif = "0.17.3"
reqwest = { version = "0.11.14", features = ["serde_json", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }
webbrowser = "0.8.7"
termimad = "0.23.0"
ansi-to-tui = "2.0.0"
